# SlymeGPT

./: .env  .gitignore  .promot  .prompt  00-GPT_base.ipynb  Dockerfile  Untitled.ipynb  command.py  flygpt.py  ide.md  prompt.md  pyproject.toml  requirements.txt  run.sh  test.ipynb  test.md  test1.ipynb  test2.ipynb  test3.ipynb  test4.ipynb  time_exc.ipynb
flygpt/: api.py  flygpt.py  tasks.py
notebook/: 00-GPT_base.ipynb  01-remote.ipynb  02-test_end_response.ipynb  async.py  async_test.md  test.md  test3.ipynb  test_langchain.ipynb  time_exc.ipynb  undetect_remote.ipynb
src/: api.py  command.py  flygpt.py  install_chromedriver.py  test.py
src/flygpt/: api.py  client.py  custom_chat_model.py  flygpt.py  server.py
src/flygpt/scripts/: flygpt.py  start_api_server.py  start_container.py
src/flygpt/templates/: default.j2
