[tool.poetry]
name = "flygpt"
version = "0.1.0"
description = "A Python package for FlyGPT."
authors = ["Du Han <duhan@189.cn>"]

[tool.poetry.dependencies]
python = "^3.9"
beautifulsoup4 = "^4.10.0"
requests = "^2.26.0"
termcolor = "^1.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start_api_server = "flygpt.scripts.start_api_server:main"
start_container = "flygpt.scripts.start_container:main"
flygpt = "flygpt.scripts.flygpt:main"
